--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
   font-family: "IBM Plex Mono", monospace;
 }
 
-.top-nav__wrapper{
+.top-nav__wrapper {
   background-color: #1B1B1B;
   padding: 26px 80px;
 
@@ -43,12 +43,12 @@ body {
   align-items: center;
 
   border-radius: 0px 0px 12px 12px;
+  position: relative;
 }
 
 .nav-links {
   list-style: none;
   display: flex;
-  justify-content: space-around;
   gap: 40px;
 }
 
@@ -58,12 +58,56 @@ body {
   font-weight: 500;
   line-height: 1.2px;
   cursor: pointer;
-
 }
 
 .top-nav__logos a {
   cursor: pointer;
   text-decoration: none;
+}
+
+/* Бургер */
+.burger {
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 24px;
+  height: 18px;
+  cursor: pointer;
+}
+
+.burger span {
+  display: block;
+  height: 3px;
+  background: #ccc;
+  border-radius: 2px;
+  transition: 0.3s;
+}
+
+@media (max-width: 768px) {
+  .nav-links {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+
+    background: #1B1B1B;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+
+    padding: 20px 0;
+    border-radius: 0 0 12px 12px;
+
+    display: none;
+  }
+
+  .nav-links.active {
+    display: flex;
+  }
+
+  .burger {
+    display: flex;
+  }
 }
 
 
@@ -465,3 +509,6 @@ body {
   padding: 20px 10px;
   font-size: 0.9rem;
 }
+
+
+
